--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -45,7 +45,7 @@
         <td>*</td>
         <td th:text="${two}"></td>
         <td>=</td>
-        <td th:text="${two}-${two}+${two}"></td>
+        <td th:text="${two}-${two}*${two}"></td>
     </tr>
 
 </table>
